[project]
name = "example-pyproject"
description = "Example packaging project"
version = "0.0.1"
license = "MIT"
license-files = "LICENSE.txt"
authors = { name = "Primary A", email = "pa@alaska.edu" }
maintainers = { name = "Primary A", email = "pa@alaska.edu" }
dependencies = [ "numpy", "xarray" ]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]